Adding button layout for games. And Styling for button

--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
   </head>
   <body>
     <h1>Mini-games</h1>
+    <div id="mini-game-list" class="btn-group">
+      <button
+        id="mini-game-button"
+        class="mini-game-button"
+        onclick="location.href ='about.html';"
+      >
+        1
+      </button>
+    </div>
   </body>
 </html>
