--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <h1>Mini-games</h1>
     <div id="mini-game-list" class="btn-group">
       <button
-        id="mini-game-button"
+        id="memory-game-button"
         class="mini-game-button"
-        onclick="location.href ='memory-game.html';"
+        onclick="location.href = 'Memory Game/memory-game.html';"
       >
         Memory Game
       </button>
     </div>
   </body>
+  <script src="index.js"></script>
 </html>
